Added an index.html file with a default template

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- Makes the website responsive on mobile devices -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Sets what appears in the browser tab -->
-    <title>My GitHub Website</title>
+    <title>Amanda Nguyen</title>
     <!-- Opens the style section for CSS -->
     <style>
         /* Styles for the entire page */
@@ -66,7 +66,7 @@
     <!-- Header section with main title -->
     <header>
         <!-- Main title of the website -->
-        <h1>Welcome to My Website</h1>
+        <h1>Amanda Nguyen</h1>
     </header>
     
     <!-- Navigation menu with links -->
@@ -74,6 +74,7 @@
         <!-- Links to different sections (the # makes them jump to sections on the page) -->
         <a href="#home">Home</a>
         <a href="#about">About</a>
+        <a href="#projects">Projects</a>
         <a href="#contact">Contact</a>
     </nav>
 
@@ -93,6 +94,14 @@
             <h2>About</h2>
             <!-- Section content -->
             <p>About text here</p>
+        </section>
+
+        <!-- Projects section with id for navigation --> 
+        <section id="projects">
+            <!-- Section title -->
+            <h2>Projects</h2>
+            <!-- Section content -->
+            <p><b>BOLD</b>About text here</p>
         </section>
 
         <!-- Contact section with id for navigation -->
