--- a/about.html
+++ b/about.html
@@ -9,30 +9,30 @@
     <!-- Makes the website responsive on mobile devices -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Sets the title that appears in the browser tab -->
-    <title>My GitHub Website - Home</title>
+    <title>My GitHub Website - About</title>
     <!-- Links to the external CSS file that contains all the styles -->
     <link rel="stylesheet" href="styles.css">
 </head>
 <!-- The body contains all visible content -->
 <body>
-    <!-- Header section with main title -->
+    <!-- Header section with page title -->
     <header>
-        <h1>Welcome to My Website</h1>
+        <h1>About Me</h1>
     </header>
     
     <!-- Navigation menu with links to other pages -->
     <nav>
-        <!-- Links to each page (current page is index.html) -->
+        <!-- Links to each page (current page is about.html) -->
         <a href="index.html">Home</a>
         <a href="about.html">About</a>
-        <a href="projects.html">Projects</a>
+	    <a href="projects.html">Projects</a>
         <a href="contact.html">Contact</a>
     </nav>
 
     <!-- Main content section -->
     <div class="content">
-        <h2>Home</h2>
-        <p>Welcome to my website! This is the home page.</p>
+        <h2>About</h2>
+        <p>This is the about page. Add your information here.</p>
     </div>
 
     <!-- Footer section with copyright information -->
