Updated pages to support two-column entries

--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
     <!-- Makes the website responsive on mobile devices -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Sets the title that appears in the browser tab -->
-    <title>My GitHub Website - About</title>
+    <title>Amanda Nguyen - About</title>
     <!-- Links to the external CSS file that contains all the styles -->
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -31,8 +31,10 @@
 
     <!-- Main content section -->
     <div class="content">
-        <h2>About</h2>
-        <p>This is the about page. Add your information here.</p>
+        <h2>Computational Experience</h2>
+        <p>Insert story 1</p>
+        <h2>Undergraduate Career</h2>
+        <p>Insert story 2</p>
     </div>
 
     <!-- Footer section with copyright information -->
