--- a/projects.html
+++ b/projects.html
@@ -32,7 +32,9 @@
     <!-- Main content section -->
     <div class="content">
         <h2>Projects</h2>
-        <p>Add your projects information here.</p>
+        <p>Structure-Based Virtual Screening for Protein Inhibitors, Summer 2024 - Present</p>
+        <p>BIOL ???? Introduction to Programming in Biological Sciences, Fall 2024</p>
+        <p>CHEM 4310 Introduction to Programming & Machine Learning in Chemistry, Spring 2024</p>
     </div>
 
     <!-- Footer section with copyright information -->
