--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- Makes the website responsive on mobile devices -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Sets the title that appears in the browser tab -->
-    <title>My GitHub Website - Home</title>
+    <title>Amanda Nguyen - Home</title>
     <!-- Links to the external CSS file that contains all the styles -->
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -17,7 +17,7 @@
 <body>
     <!-- Header section with main title -->
     <header>
-        <h1>Welcome to My Website</h1>
+        <h1>Amanda Nguyen</h1>
     </header>
     
     <!-- Navigation menu with links to other pages -->
@@ -31,8 +31,17 @@
 
     <!-- Main content section -->
     <div class="content">
-        <h2>Home</h2>
-        <p>Welcome to my website! This is the home page.</p>
+        <div class="flex-container">
+            <!-- Text content on the left -->
+            <div class="text-content">
+                <h2>Home</h2>
+                <p>Computational Biochemistry Student Researcher at the Torabifard Lab. Fourth-year biochemistry undergraduate student at UT Dallas.</p>
+            </div>
+            <!-- Image on the right -->
+            <div class="image-content">
+                <img src="images/portrait_circlecrop.png" alt="Portrait">
+            </div>
+        </div>
     </div>
 
     <!-- Footer section with copyright information -->
