--- a/contact.html
+++ b/contact.html
@@ -9,9 +9,17 @@
     <!-- Makes the website responsive on mobile devices -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Sets the title that appears in the browser tab -->
-    <title>My GitHub Website - Contact</title>
+    <title>Amanda Nguyen - Contact</title>
     <!-- Links to the external CSS file that contains all the styles -->
     <link rel="stylesheet" href="styles.css">
+    <style>
+        .contact-section {
+            margin-bottom: 2rem;
+        }
+        .contact-item {
+            margin-bottom: 0.5rem;
+        }
+    </style>
 </head>
 <!-- The body contains all visible content -->
 <body>
@@ -31,8 +39,27 @@
 
     <!-- Main content section -->
     <div class="content">
-        <h2>Contact</h2>
-        <p>Add your contact information here.</p>
+        <h2>Let's Connect</h2>
+        <p>Please contact me through one of the following profiles for any inquiries (email preferred).</p>
+
+        <div class="contact-section">
+
+            <div class="contact-item">
+                <strong>Professional Email:</strong> amandachaunguyen@gmail.com
+                <strong>University Email:</strong> amanda.nguyen4@utdallas.edu
+            </div>
+
+            <div class="contact-item">
+                <strong>LinkedIn:</strong>
+                <a href="https://www.linkedin.com/in/amanda-c-nguyen">linkedin.com/in/amanda-c-nguyen</a>
+            </div>
+
+            <div class="contact-item">
+                <strong>GitHub:</strong>
+                <a href="https://github.com/amandacnguyen">github.com/amandacnguyen</a>
+            </div>
+
+        </div>
     </div>
 
     <!-- Footer section with copyright information -->
