Updated contact page

--- a/contact.html
+++ b/contact.html
@@ -46,6 +46,9 @@
 
             <div class="contact-item">
                 <strong>Professional Email:</strong> amandachaunguyen@gmail.com
+            </div>
+
+            <div class="contact-section">
                 <strong>University Email:</strong> amanda.nguyen4@utdallas.edu
             </div>
 
