Updated contact page

--- a/contact.html
+++ b/contact.html
@@ -46,10 +46,12 @@
 
             <div class="contact-item">
                 <strong>Professional Email:</strong> amandachaunguyen@gmail.com
+                <a href="mailto:amandachaunguyen@gmail.com">amandachaunguyen@gmail.com</a>
             </div>
 
             <div class="contact-section">
                 <strong>University Email:</strong> amanda.nguyen4@utdallas.edu
+                <a href="mailto:amanda.nguyen4@utdallas.edu">amanda.nguyen4@utdallas.edu</a>
             </div>
 
             <div class="contact-item">
