--- a/contact.html
+++ b/contact.html
@@ -45,12 +45,12 @@
         <div class="contact-section">
 
             <div class="contact-item">
-                <strong>Professional Email:</strong> amandachaunguyen@gmail.com
+                <strong>Professional Email:</strong>
                 <a href="mailto:amandachaunguyen@gmail.com">amandachaunguyen@gmail.com</a>
             </div>
 
             <div class="contact-section">
-                <strong>University Email:</strong> amanda.nguyen4@utdallas.edu
+                <strong>University Email:</strong>
                 <a href="mailto:amanda.nguyen4@utdallas.edu">amanda.nguyen4@utdallas.edu</a>
             </div>
 
