--- a/contact.html
+++ b/contact.html
@@ -49,7 +49,7 @@
                 <a href="mailto:amandachaunguyen@gmail.com">amandachaunguyen@gmail.com</a>
             </div>
 
-            <div class="contact-section">
+            <div class="contact-item">
                 <strong>University Email:</strong>
                 <a href="mailto:amanda.nguyen4@utdallas.edu">amanda.nguyen4@utdallas.edu</a>
             </div>
